assets/styles/index.scss
@import '~bootstrap/scss/bootstrap';

$base: #232323;
$border: solid #6a0dad;
$light-base: #454545;
$primary: #56d256;
$highlight: #6a0dad;
$shadow: -1px 2px 1px 1px #111;

body {
  background-color: $base;
  color: $primary;
  font-family: monospace;
  overflow-x: hidden;
}

.hidden {
  display: none !important;
}

.full-image {
  border: 1px $border;
  border-radius: 5px;
  box-shadow: -1px 2px 1px 2px #c4c4c4;
  width: 80%;
}

.index-listing {
  display: flex;
  flex-flow: row wrap;
}

.loader {
  animation: spin 2s linear infinite;
  border: 10px solid #787878;
  border-radius: 50%;
  border-top: 10px solid $highlight;
  height: 3rem;
  margin: auto;
  width: 3rem;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.modal {
  color: $base;

  input,
  textarea {
    border: 0;
    text-align: center;
  }
}

.title-content {
  text-align: center;
  text-shadow: 5px 5px 10px #000000;

  form {
    border: 1px $border;
    border-radius: 25%;
    box-shadow: -3px 5px 3px 5px #111;
    margin: auto;
    padding: 3vh;
    width: 22em;

    a {
      color: $primary;
      display: inline-block;
      font-size: 12px;
      margin-top: 2vh;
    }

    legend {
      font-size: 3em;
    }

    input {
      border-radius: 5px;
    }
  }

  legend {
    font-size: 2em;
  }

  input {
    margin: 1vh auto;
    width: 80%;
  }

  .logo {
    margin: 10vh auto 5vh;
    width: 18rem;
  }

  .submit-btn {
    display: block;
    margin: auto;
    padding: 0;
  }

  .title-nav-link {
    text-decoration: underline;
  }
}

.log-section {
  left: 23rem;
  position: relative;

  a {
    color: $primary;
    display: inline-block;
    font-size: 3em;
  }
  h2 {
    display: inline-block;
    font-size: 5em;
    font-style: italic;
  }

  #index-wrapper {
    width: 75vw;
  }
}

.side-nav {
  background-color: $light-base;
  border-right: 5px $border;
  height: 105vh;
  margin-right: 0;
  margin-top: -1rem;
  position: fixed;
  width: 22rem;

  .closeNav {
    color: $primary;
    display: block;
    float: right;
    font-size: 2.5em;
    margin: auto;
  }

  form {
    border: $border;
    border-radius: 25%;
    box-shadow: $shadow;
    margin: 5vh auto;
    position: static;
    text-align: center;
    width: 85%;

    input,
    textarea {
      border-radius: 5px;
      display: inline-block;
      width: 75%;
    }

    .submit-btn {
      display: inline-block;
      padding: 1vh;
      width: 50%;
    }
  }

  button {
    box-shadow: $shadow;
    display: block;
    margin: 4vh auto;
  }
}

.thumbnail {
  border: $border;
  border-radius: 5px;
  height: 3rem;
  width: 3rem;
}

@media only screen and (max-width: 600px) {
  .modal-dialog {
    margin: 0;
    padding: 0;
  }

  .modal-content {
    margin: 0 5vw;
    position: relative;
    top: -25vh;
    width: 80vw;
  }
}

@media only screen and (min-width: 750px) {
  #index-wrapper {
    column-count: 2;
    column-width: 10px;
    text-align: justify;
  }
}

@media only screen and (min-width: 1000px) {
  #index-wrapper {
    column-count: 3;
  }
}

